[tool.poetry]
name = "kuqueue"
version = "0.1.0"
description = "An easy pythonic redis-based MQ"
authors = ["Yehonatan Zecharia <yonti95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyrsmq = "^0.4.2"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
flake8 = "^3.8.4"
isort = "^5.5.4"
black = "^20.8b1"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
pytest = "^6.1.1"
pytest-docker = "^0.10.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
